--- a/app/src/main/res/values/Style.xml
+++ b/app/src/main/res/values/Style.xml
@@ -49,27 +49,29 @@
         <item name="android:background">#E0E0E0</item>
     </style>
 
-    <style name="UserPageMenuButton">
-        <item name="android:layout_height">wrap_content</item>
+    <style name="UserPageMenuButton" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:layout_weight">1</item>
         <item name="android:orientation">vertical</item>
         <item name="android:gravity">center</item>
-        <item name="android:padding">16dp</item>
-        <item name="android:background">?attr/selectableItemBackground</item>
         <item name="android:clickable">true</item>
         <item name="android:focusable">true</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:padding">8dp</item>
     </style>
 
     <style name="UserPageMenuIcon">
-        <item name="android:layout_width">40dp</item>
-        <item name="android:layout_height">40dp</item>
-        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_width">32dp</item>
+        <item name="android:layout_height">32dp</item>
+        <item name="android:layout_marginBottom">4dp</item>
     </style>
 
     <style name="UserPageMenuText">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">#333333</item>
-        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">#424242</item>
+        <item name="android:textSize">12sp</item>
     </style>
 
     <style name="CookWriteTitle" parent="Widget.AppCompat.TextView">
@@ -104,5 +106,31 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- 검색어 태그(Chip) 스타일 -->
+    <style name="SearchKeywordChip" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="chipBackgroundColor">@color/search_color</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="closeIconTint">@color/darker_gray</item>
+        <item name="chipCornerRadius">20dp</item>
+        <item name="android:checkable">false</item>
+    </style>
+
+    <!-- 필터/정렬 버튼 스타일 -->
+    <style name="SearchFilterButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">#424242</item>
+        <item name="android:paddingVertical">6dp</item>
+        <item name="android:paddingHorizontal">12dp</item>
+        <item name="android:drawablePadding">4dp</item>
+        <item name="android:gravity">center_vertical</item>
+        <item name="android:background">@drawable/bg_gray_rounded</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
     </style>
 </resources>
