--- a/app/src/main/res/layout/activity_recipe_edit.xml
+++ b/app/src/main/res/layout/activity_recipe_edit.xml
@@ -113,7 +113,7 @@
 
             <EditText
                 android:id="@+id/et_recipe_title"
-                style="@style/CookWriteEditText"
+                style="@style/CookWriteEditsText"
                 android:hint="레시피 제목" />
 
             <EditText
