--- a/app/src/main/res/layout/toolbar_basic.xml
+++ b/app/src/main/res/layout/toolbar_basic.xml
@@ -31,7 +31,7 @@
             android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="화면 이름"
+            android:text=""
             android:textSize="18sp"
             android:textColor="@color/black20"
             android:textStyle="bold"
