--- a/app/src/main/res/menu/menu_bottom_nav.xml
+++ b/app/src/main/res/menu/menu_bottom_nav.xml
@@ -2,32 +2,31 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/fragment_home"
-        android:icon="@drawable/ic_nav_home"
-        android:title="홈" />
+        android:title="홈"
+        android:icon="@drawable/ic_nav_home"/>
     <item
         android:id="@+id/fragment_search"
-        android:icon="@drawable/ic_nav_search"
-        android:title="검색" />
+        android:title="검색"
+        android:icon="@drawable/ic_nav_search"/>
     <item
-        android:id="@+id/fragment_addRecipe"
-        android:icon="@drawable/ic_nav_add"
-        android:title="레시피 쓰기" />
+        android:id="@+id/fragment_favorite"
+        android:title="즐겨찾기"
+        android:icon="@drawable/ic_nav_add"/>
     <item
         android:id="@+id/fragment_another"
-        android:icon="@drawable/ic_nav_bookmark"
-        android:title="북마크" />
+        android:title="설정"
+        android:icon="@drawable/ic_nav_bookmark"/>
     <item
         android:id="@+id/fragment_settings"
-        android:icon="@drawable/ic_nav_author"
-        android:title="마이 페이지" />
+        android:title="설정"
+        android:icon="@drawable/ic_nav_author"/>
 </menu>
 
-<!-- BottomNavigationView 추가
+    <!-- BottomNavigationView 추가
 <com.google.android.material.bottomnavigation.BottomNavigationView
 android:id="@+id/bottom_navigation_view"
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:background="?android:attr/windowBackground"
 app:menu="@menu/menu_bottom_nav"
-app:labelVisibilityMode="unlabeled" />
--->
+app:labelVisibilityMode="unlabeled" /> -->
