UI: 프로필 수정, 비밀번호, 닉네임

--- a/app/src/main/res/values/Style.xml
+++ b/app/src/main/res/values/Style.xml
@@ -71,4 +71,10 @@
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">13sp</item>
     </style>
+
+    <!-- 원형 이미지 -->
+    <style name="CircleImageView">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
